Add about section structure and responsive layout

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 </head>
 
 <body>
-    <div id="header">
-        <h1>Welcome to <br> Deepak's Abode</h1>
-    </div>
+    <section id="about">
+      <div class="container">
+        <h1>Deepak S B</h1>
+        <h2>Machine Learning | Web Development | DSA</h2>
+        <p>Hi, I'm interested in competitive programming and building software solutions in the above mentioned domains.</p>
+      </div>
+    </section>
 </body>
 
 </html>
