Refine hero animation and layout

--- a/index.html
+++ b/index.html
@@ -13,14 +13,30 @@
 
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script src="./js/animation.js" defer></script>
 </head>
 
 <body>
     <section id="about">
       <div class="container">
-        <h1>Deepak S B</h1>
-        <h2>Machine Learning | Web Development | DSA</h2>
-        <p>Hi, I'm interested in competitive programming and building software solutions in the above mentioned domains.</p>
+        <h1 class="hero-name">
+          <span class="name-initial" aria-hidden="true">D</span><span class="name-rest">eepak S B</span>
+        </h1>
+        <h2 class="fade-in-delay">Machine Learning | Web Development | DSA</h2>
+        <p class="fade-in-delay-2">Hi, I'm interested in competitive programming and building software solutions in the above mentioned domains.</p>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="contairner">
+        <h2>Projects</h2>
+        <div class="project-card">
+          <h3>Project 1</h3>
+          <p>Description of project 1</p>
+        </div>
+        <div class="project-card">
+          <h3>Project 2</h3>
+          <p>Description of project 2</p>
+        </div>
       </div>
     </section>
 </body>
