Refine hero animation and layout

--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
 </head>
 
 <body>
-    <section id="about">
-      <div class="container">
-        <h1 class="hero-name">
-          <span class="name-initial" aria-hidden="true">D</span><span class="name-rest">eepak S B</span>
-        </h1>
-        <h2 class="fade-in-delay">Machine Learning | Web Development | DSA</h2>
-        <p class="fade-in-delay-2">Hi, I'm interested in competitive programming and building software solutions in the above mentioned domains.</p>
+  <section id="about">
+    <div class="container">
+      <h1 class="hero-name">
+        <span class="name-initial" aria-hidden="true">D</span><span class="name-rest">ee<span
+            class="anim-target">pa</span>k S B</span>
+      </h1>
+      <h2 class="fade-in-delay">Machine Learning | Web Development | DSA</h2>
+      <p class="fade-in-delay-2">Hi, I'm interested in competitive programming and building software solutions in the
+        above mentioned domains.</p>
+    </div>
+  </section>
+  <section id="projects">
+    <div class="contairner">
+      <h2>Projects</h2>
+      <div class="project-card">
+        <h3>Project 1</h3>
+        <p>Description of project 1</p>
       </div>
-    </section>
-    <section id="projects">
-      <div class="contairner">
-        <h2>Projects</h2>
-        <div class="project-card">
-          <h3>Project 1</h3>
-          <p>Description of project 1</p>
-        </div>
-        <div class="project-card">
-          <h3>Project 2</h3>
-          <p>Description of project 2</p>
-        </div>
+      <div class="project-card">
+        <h3>Project 2</h3>
+        <p>Description of project 2</p>
       </div>
-    </section>
+    </div>
+  </section>
 </body>
 
 </html>
