--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
 
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <script src="./js/animation.js" defer></script>
 </head>
 
 <body>
   <section id="about">
     <div class="container">
-      <h1 class="hero-name">
-        <span class="name-initial" aria-hidden="true">D</span><span class="name-rest">ee<span
-            class="anim-target">pa</span>k S B</span>
-      </h1>
-      <h2 class="fade-in-delay">Machine Learning | Web Development | DSA</h2>
-      <p class="fade-in-delay-2">Hi, I'm interested in competitive programming and building software solutions in the
+      <h1 class="hero-name">Deepak S B</h1>
+      <h2>Machine Learning | Web Development | DSA</h2>
+      <p>Hi, I'm interested in competitive programming and building software solutions in the
         above mentioned domains.</p>
     </div>
   </section>
@@ -39,6 +35,11 @@
         <h3>Project 2</h3>
         <p>Description of project 2</p>
       </div>
+    </div>
+  </section>
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
     </div>
   </section>
 </body>
